--- a/Saneamento_Basico_R/pom.xml
+++ b/Saneamento_Basico_R/pom.xml
@@ -11,4 +11,15 @@
         <maven.compiler.target>11</maven.compiler.target>
         <exec.mainClass>com.mycompany.saneamento_basico_r.Saneamento_Basico_R</exec.mainClass>
     </properties>
+    
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
+            <scope>provided</scope>
+	</dependency>
+        
+        
+    </dependencies>
 </project>
