--- a/Saneamento_Basico_R/pom.xml
+++ b/Saneamento_Basico_R/pom.xml
@@ -5,24 +5,31 @@
     <artifactId>Saneamento_Basico_R</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <exec.mainClass>com.mycompany.saneamento_basico_r.Saneamento_Basico_R</exec.mainClass>
+    </properties>
+    
     <dependencies>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.36</version>
-            <type>jar</type>
-        </dependency>
+            <version>1.18.24</version>
+            <scope>provided</scope>
+	</dependency>
+        
         <dependency>
-            <groupId>javax.persistence</groupId>
-            <artifactId>javax.persistence-api</artifactId>
-            <version>2.2</version>
-            <type>jar</type>
+            <groupId>org.hibernate</groupId>
+	    <artifactId>hibernate-core</artifactId>
+            <version>5.4.12.Final</version>
         </dependency>
+        
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-email</artifactId>
-            <version>1.5</version>
-            <type>jar</type>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.19</version>
         </dependency>
         <dependency>
             <groupId>com.itextpdf</groupId>
@@ -31,10 +38,4 @@
             <type>jar</type>
         </dependency>
     </dependencies>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <exec.mainClass>com.mycompany.saneamento_basico_r.Saneamento_Basico_R</exec.mainClass>
-    </properties>
 </project>
